<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:text="@string/headline"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline"
        android:layout_alignParentStart="true"
        android:text="@string/headline1"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="49dp"
        android:layout_height="37dp"
        android:layout_below="@id/headline1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/znak" />

    <TextView
        android:id="@+id/headline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline1"
        android:layout_marginLeft="55dp"
        android:text="@string/headline2"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/headline3"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/date_text"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/date_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:entries="@array/choose_day"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/date_text"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/day"
        android:background="@color/white"
        android:entries="@array/choose_month"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/year_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/year_headline"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/year"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_below="@id/day"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/year_headline"
        android:background="@color/white"
        android:inputType="number"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/sex_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/year_headline"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/sex_headline"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/year_headline"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/sex_headline"
        android:background="@color/white"
        android:entries="@array/choose_sex"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sex_headline"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/line1"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/line2"

        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/line3"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/pulse1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/line3"
        android:background="@color/white"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/line4"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/line5"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/line6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/line6"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/pulse2"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/line5"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/line3"
        android:background="@color/white"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/line7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/line7"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <Button
        android:id="@+id/start"
        android:layout_width="102dp"
        android:layout_height="49dp"
        android:layout_below="@id/line7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="20dp">

    </Button>


</RelativeLayout>