<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/rez1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/rez1"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rez2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rez1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:text="@string/rez2"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="208dp"
        android:layout_height="170dp"
        android:layout_below="@id/resultText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/good" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rez2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:text="@string/goodres"
        android:textColor="@color/white"
        android:textSize="20sp" />



</RelativeLayout>